[package]
name = "whisper-agent-mcp-host"
description = "MCP server exposing a controlled slice of POSIX surface for whisper-agent"
version = "0.3.5"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-mcp-host"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ignore = "0.4"
globset = "0.4"
regex = "1"
subtle = { workspace = true }
futures = "0.3"
async-stream = "0.3"
whisper-agent-mcp-proto = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
