[package]
name = "whisper-agent-mcp-host"
description = "MCP server exposing a controlled slice of POSIX surface for whisper-agent"
version = "0.3.9"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-mcp-host"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ignore = "0.4"
globset = "0.4"
regex = "1"
# Image decode/encode for the `view_image` tool. Same crate + feature
# set used by webui and desktop for paste/drop image handling, so the
# workspace already pins the version.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# Base64 for serializing image bytes back to the model in MCP image
# content blocks. STANDARD-encoded.
base64 = "0.22"
subtle = { workspace = true }
futures = "0.3"
async-stream = "0.3"
whisper-agent-mcp-proto = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
