[package]
name = "whisper-agent-mcp-proto"
description = "Shared MCP and JSON-RPC types for whisper-agent's MCP servers (mcp-host, mcp-fetch)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
