[package]
name = "whisper-agent-mcp-search"
description = "MCP server exposing a web-search tool (Brave Search API) for whisper-agent"
version = "0.3.9"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-mcp-search"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
whisper-agent-mcp-proto = { workspace = true }
