[package]
name = "whisper-agent-protocol"
description = "Wire protocol shared between whisper-agent server and webui (CBOR over WebSocket)"
version = "0.3.1"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
