[package]
name = "whisper-agent-sandbox"
description = "Sandbox provisioning daemon — creates isolated execution environments and runs MCP hosts inside them"
version = "0.2.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-sandbox"
path = "src/main.rs"

[dependencies]
whisper-agent-protocol = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
landlock = "0.4"
rand = "0.9"
subtle = { workspace = true }
