[package]
name = "whisper-agent-webui"
description = "Browser chat UI for whisper-agent (egui + WASM)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
# `toml` lets the structured pod-config editor round-trip its working
# `PodConfig` with the server (server expects raw TOML in
# `UpdatePodConfig`). `default-features = false` drops the parse-spans
# feature we don't need, keeping the wasm bundle lean.
toml = { version = "0.8", default-features = false, features = ["display", "parse"] }
whisper-agent-protocol = { path = "../whisper-agent-protocol" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "Location",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "BinaryType",
    "Storage",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
