[package]
name = "whisper-agent-webui"
description = "Browser chat UI for whisper-agent (egui + WASM)"
version = "0.2.1"
edition.workspace = true
license.workspace = true

[lib]
# `cdylib` builds the wasm bundle `wasm-pack` ships to the browser; `rlib`
# lets sibling crates (whisper-agent-desktop) import this crate's UI modules
# as a native library. The wasm-only transport lives under
# `#[cfg(target_arch = "wasm32")]`; everything else (ChatApp, editor, cron
# preview, …) is portable and powers the desktop binary too.
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.34"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
# `toml` lets the structured pod-config editor round-trip its working
# `PodConfig` with the server (server expects raw TOML in
# `UpdatePodConfig`). `default-features = false` drops toml 1.x's
# `std` feature (we only need `serde`-driven from_str / to_string_pretty),
# keeping the wasm bundle lean. Kept inline (not workspace) because the
# server crate wants toml's default features.
toml = { version = "1", default-features = false, features = ["display", "parse", "serde"] }
# `similar` powers the unified-diff renderer for edit_file / write_file
# tool calls. Default features include `bytes` + `text`; we only need
# the text diff API.
similar = { version = "2", default-features = false, features = ["text"] }
# Markdown viewer for chat log messages. Stripped to the text-parser
# only: no `load-images` (don't fetch network resources from rendered
# output) and no syntect-backed `better_syntax_highlighting` (keeps
# the wasm bundle small — plain monospace on code blocks reads fine).
egui_commonmark = { version = "0.23", default-features = false, features = ["pulldown_cmark"] }
# Cron + tz for the behavior-editor "next N fires" preview. Mirror the
# server's parsers so what the editor shows matches what the scheduler
# will fire. chrono's default features include `clock` + `wasmbind`,
# so `Utc::now()` routes through `js_sys::Date::now()` on wasm32.
# chrono is kept inline (not workspace) because it needs its default
# features here, while the server crate opts out of them.
cron = { workspace = true }
chrono = "0.4"
chrono-tz = { workspace = true }
whisper-agent-protocol = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "Location",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "BinaryType",
    "Storage",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
