[package]
name = "whisper-agent-webui"
description = "Browser chat UI for whisper-agent (egui + WASM)"
version = "0.3.8"
edition.workspace = true
license.workspace = true

[lib]
# `cdylib` builds the wasm bundle `wasm-pack` ships to the browser; `rlib`
# lets sibling crates (whisper-agent-desktop) import this crate's UI modules
# as a native library. The wasm-only transport lives under
# `#[cfg(target_arch = "wasm32")]`; everything else (ChatApp, editor, cron
# preview, …) is portable and powers the desktop binary too.
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.34"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
# `toml` lets the structured pod-config editor round-trip its working
# `PodConfig` with the server (server expects raw TOML in
# `UpdatePodConfig`). `default-features = false` drops toml 1.x's
# `std` feature (we only need `serde`-driven from_str / to_string_pretty),
# keeping the wasm bundle lean. Kept inline (not workspace) because the
# server crate wants toml's default features.
toml = { version = "1", default-features = false, features = ["display", "parse", "serde"] }
# `similar` powers the unified-diff renderer for edit_file / write_file
# tool calls. Default features include `bytes` + `text`; we only need
# the text diff API.
similar = { version = "2", default-features = false, features = ["text"] }
# Markdown viewer for chat log messages. Stripped to the text-parser
# only: no `load-images` (don't fetch network resources from rendered
# output) and no syntect-backed `better_syntax_highlighting` (keeps
# the wasm bundle small — plain monospace on code blocks reads fine).
egui_commonmark = { version = "0.23", default-features = false, features = ["pulldown_cmark"] }
# Image rendering for compose attachments and inline conversation
# thumbnails. `egui_extras::install_image_loaders` wires up the
# `bytes://` URI scheme egui's `Image` widget consumes; the `image`
# crate below decodes the actual bytes. Formats match our
# `ImageMime` set — HEIC/HEIF aren't supported client-side today
# (would need a heavy `libheif` dep), so they display as a generic
# placeholder until the compose path explicitly rejects them or we
# add transcoding.
egui_extras = { version = "0.34", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# Native + browser file picker. Drag-drop alone is easy to miss and
# hard to diagnose when it silently fails; an explicit affordance
# cuts the problem space in half (picker works but drop doesn't →
# drag-drop plumbing bug; neither works → staging/capabilities bug).
# `default-features = false` drops the GTK3 native backend in favor
# of xdg-portal where available, keeping the native binary smaller.
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
# Cron + tz for the behavior-editor "next N fires" preview. Mirror the
# server's parsers so what the editor shows matches what the scheduler
# will fire. chrono's default features include `clock` + `wasmbind`,
# so `Utc::now()` routes through `js_sys::Date::now()` on wasm32.
# chrono is kept inline (not workspace) because it needs its default
# features here, while the server crate opts out of them.
cron = { workspace = true }
chrono = "0.4"
chrono-tz = { workspace = true }
whisper-agent-protocol = { workspace = true }

# Native-only: rfd's `xdg-portal` backend needs an async runtime to
# poll its futures. The desktop crate already runs a tokio runtime
# for the WS task; wiring a small runtime here is the least-friction
# option for file-picker plumbing. `rt` is the smallest feature that
# gives us a single-threaded executor we can `block_on` inside a
# background thread.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "Location",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "BinaryType",
    "Storage",
    # Drag-drop takeover: eframe's web backend doesn't deliver drop
    # events to egui's input queue reliably across canvas/body
    # boundaries. We install our own document-level `dragover` +
    # `drop` handlers that read files via the Blob.arrayBuffer()
    # Promise and push into the same pending-picks queue the attach
    # button uses.
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "FileList",
    "Blob",
    # Clipboard paste: register a document-level `paste` handler so
    # users can Ctrl+V an image into the compose area. We pull file-
    # kind items out of the ClipboardEvent's DataTransfer and route
    # them through the same AttachmentIngress the file-picker and
    # drag-drop handlers feed.
    "ClipboardEvent",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
